# packaging-publishing

./: .gitignore  LICENSE  README.md  mkdocs.yml  notebook.ipynb  pyproject.toml
tests/: test_CancerModel.py
